--- a/ColoradoWaters/res/values/strings.xml
+++ b/ColoradoWaters/res/values/strings.xml
@@ -14,4 +14,10 @@
 	<string name="text_station_details">Station Details</string>
 	<string name="text_no_chart_data_available">No Provisional Data Available</string>
 	<string name="text_current_conditions">Current Conditions</string>
+	<string name="text_coming_soon">Coming Soon</string>
+	
+	<string name="tab_current_conditions">Current</string>
+	<string name="tab_charts">Charts</string>
+	<string name="tab_map">Map</string>
+	<string name="tab_weather">Weather</string>
 </resources>
